2000-11-06  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-buddy-list-point): added.
	(tnt-show-buddies): now switching to the buffer before we build
	it.
	(tnt-build-buddy-buffer): now using globally-stored point, rather
	than locally.
	(tnt-get-buddy-at-point): store point.
	(tnt-next-buddy): store point.
	(tnt-prev-buddy): store point.
	(tnt-next-group): store point.
	(tnt-prev-group): store point.

2000-08-02  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-just-reconnected): added.
	(tnt-just-reconnected-unset-after): added.
	(tnt-unset-just-reconnected): added.  
	(tnt-handle-closed): now only reconnects if we didn't just
	reconnect once.
	(tnt-handle-nick): sets the just-reconnected flag, and starts a
	timer to unset it.

2000-07-31  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-backup-or-restore-buddy-list): no longer
	interactive.  now buries the *edit-buddies* buffer.  no longer
	returns buddy-blist.
	(tnt-handle-config): now calls backup-or-restore.
	(tnt-handle-nick): no longer calls backup-or-restore.

2000-07-28  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-restore-buddy-list): added error reporting, more
	checking.  no longer returns buddy-blist.
	(tnt-backup-buddy-list): added.
	(tnt-restore-buddy-list-if-necessary): removed.  replaced with
	below.
	(tnt-backup-or-restore-buddy-list): added.  calls either "restore"
	or "backup".

2000-07-28  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-switch-user): now checks if we're online, and won't
	change username if we are.

2000-07-28  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-backslashify-string): added.  given a string, adds
	backslashes to make a regexp that matches the original string.
	(tnt-strip-a-href): now calls backslashify, so that when a url
	comes in that has a ? in it, we still don't see it twice.

2000-07-27  Neil ''Fred'' Picciotto  <fred@guido.derf.net>
