@@ -1,3 +1,8 @@
+2000-11-06  Jim Whitehead  <tntdevel@sourceforge.net>
+
+	* tocstr.el (tocstr-filet): changed the definitions to reflect
+	the proper them-else
+	
 2000-11-06  Neil ''Fred'' Picciotto  <fred@guido.derf.net>
 
 	* tnt.el (tnt-buddy-list-point): added.
